force-app/main/default/objects/Nuzlocke__c/fields/Allowed_Catching_Methods_Per_Area__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Catching_Methods_Per_Area__c</fullName>
    <label>Allowed Catching Methods / Area</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breeding (1)</fullName>
            </value>
            <value>
                <fullName>Breeding (Any)</fullName>
            </value>
            <value>
                <fullName>Breeding (One/Parent)</fullName>
            </value>
            <value>
                <fullName>Breeding (One/Type)</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fossil (1)</fullName>
            </value>
            <value>
                <fullName>Fossil (Any)</fullName>
            </value>
            <value>
                <fullName>Game Corner (1)</fullName>
            </value>
            <value>
                <fullName>Game Corner (2)</fullName>
            </value>
            <value>
                <fullName>Game Corner (3)</fullName>
            </value>
            <value>
                <fullName>Game Corner (4)</fullName>
            </value>
            <value>
                <fullName>Game Corner (Any)</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Grass/Overworld</fullName>
            </value>
            <value>
                <fullName>Grass/Water</fullName>
            </value>
            <value>
                <fullName>Overworld</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Water/Tree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>