force-app/main/default/objects/Nuzlocke__c/fields/End_Status__c.field-meta.xml
<CustomField>
    <fullName>End_Status__c</fullName>
    <label>End Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>