force-app/main/default/objects/Nuzlocke__c/fields/Game_Version__c.field-meta.xml
<CustomField>
    <fullName>Game_Version__c</fullName>
    <formula>TEXT(Hero__r.Game_Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Version</label>
    <type>Text</type>
</CustomField>