force-app/main/default/objects/Nuzlocke__c/fields/Hero__c.field-meta.xml
<CustomField>
    <fullName>Hero__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hero</label>
    <referenceTo>Hero__c</referenceTo>
    <relationshipLabel>Nuzlockes</relationshipLabel>
    <relationshipName>Nuzlockes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>