force-app/main/default/objects/Nuzlocke__c/fields/Is_Finished__c.field-meta.xml
<CustomField>
    <fullName>Is_Finished__c</fullName>
    <description>Indicate if Nuzlocke is finished</description>
    <formula>AND(
 NOT(ISBLANK(End_Date__c)),
 NOT(ISBLANK(TEXT(End_Status__c)))
)</formula>
    <label>Is Finished</label>
    <type>Checkbox</type>
</CustomField>