force-app/main/default/objects/Nuzlocke__c/fields/Legendaries_Rule__c.field-meta.xml
<CustomField>
    <fullName>Legendaries_Rule__c</fullName>
    <label>Legendaries Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catch - no use</fullName>
            </value>
            <value>
                <fullName>Catch - use</fullName>
            </value>
            <value>
                <fullName>Kill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>