force-app/main/default/objects/Nuzlocke__c/fields/Multiple_Elite_Four_Fights__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Elite_Four_Fights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Nuzlocke run involves more than one Elite Four fights, thus assembling more than one final team</description>
    <inlineHelpText>Check, if Nuzlocke run involves more than one Elite Four fights, thus assembling more than one final team</inlineHelpText>
    <label>Multiple Elite Four Fights</label>
    <type>Checkbox</type>
</CustomField>