force-app/main/default/objects/Nuzlocke__c/fields/Pokemons_Caught__c.field-meta.xml
<CustomField>
    <fullName>Pokemons_Caught__c</fullName>
    <description>Number of caught Pokemons</description>
    <label>Pokemons Caught</label>
    <summaryForeignKey>Pokemon__c.Nuzlocke__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>