force-app/main/default/objects/Nuzlocke__c/fields/Pokemons_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Pokemons_Deceased__c</fullName>
    <description>Number of Pokemons lost in battle</description>
    <label>Pokemons Deceased</label>
    <summaryFilterItems>
        <field>Pokemon__c.Death__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Pokemon__c.Nuzlocke__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>