force-app/main/default/objects/Nuzlocke__c/fields/Rival_Name__c.field-meta.xml
<CustomField>
    <fullName>Rival_Name__c</fullName>
    <formula>Hero__r.Rival_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rival Name</label>
    <type>Text</type>
</CustomField>