force-app/main/default/objects/Nuzlocke__c/fields/Safari_Zone_Rule__c.field-meta.xml
<CustomField>
    <fullName>Safari_Zone_Rule__c</fullName>
    <label>Safari Zone Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount of areas/Safari</fullName>
            </value>
            <value>
                <fullName>One/Area</fullName>
            </value>
            <value>
                <fullName>One/Safari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>