force-app/main/default/objects/Nuzlocke__c/validationRules/End_Data_On_Insert.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Data_On_Insert</fullName>
    <active>true</active>
    <description>You can&apos;t provide end data (status/date) when creating new Nuzlocke</description>
    <errorConditionFormula>AND(
 ISNEW(),
 OR(
  NOT(ISBLANK(TEXT(End_Status__c))),
  NOT(ISBLANK(End_Date__c))
 )
)</errorConditionFormula>
    <errorMessage>You can&apos;t provide end data (status/date) when creating new Nuzlocke</errorMessage>
</ValidationRule>