force-app/main/default/objects/Nuzlocke__c/validationRules/End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <description>End Date can&apos;t be before Start Date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date can&apos;t be before Start Date</errorMessage>
</ValidationRule>