force-app/main/default/objects/Nuzlocke__c/validationRules/No_Full_End_Data_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Full_End_Data_Provided</fullName>
    <active>true</active>
    <description>When finishing the Nuzlocke you have to provide both End Date and End Status</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 OR(
  AND(
   NOT(ISBLANK(End_Date__c)),
   ISBLANK(TEXT(End_Status__c))
  ),
  AND(
   NOT(ISBLANK(TEXT(End_Status__c))),
   ISBLANK(End_Date__c)
  )
 )
)</errorConditionFormula>
    <errorMessage>When finishing the Nuzlocke you have to provide both End Date and End Status</errorMessage>
</ValidationRule>