force-app/main/default/objects/Nuzlocke__c/validationRules/Nuzlocke_Finished.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuzlocke_Finished</fullName>
    <active>true</active>
    <description>Can&apos;t finish Nuzlocke that is already finished</description>
    <errorConditionFormula>AND(
 PRIORVALUE(Is_Finished__c),
 OR(
  AND(
   ISCHANGED(End_Status__c),
   NOT(ISBLANK(TEXT(End_Status__c)))
  ),
  AND(
   ISCHANGED(End_Date__c),
   NOT(ISBLANK(End_Date__c))
  )
 )
)</errorConditionFormula>
    <errorMessage>Can&apos;t finish Nuzlocke that is already finished</errorMessage>
</ValidationRule>