force-app/main/default/objects/Nuzlocke__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Game_Version__c</columns>
    <columns>Hero__c</columns>
    <columns>Allowed_Catching_Methods_Per_Area__c</columns>
    <columns>Safari_Zone_Rule__c</columns>
    <columns>Legendaries_Rule__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>