force-app/main/default/objects/Nuzlocke__c/listViews/Finished_Nuzlockes.listView-meta.xml
<ListView>
    <fullName>Finished_Nuzlockes</fullName>
    <columns>NAME</columns>
    <columns>Game_Version__c</columns>
    <columns>Hero__c</columns>
    <columns>Pokemons_Caught__c</columns>
    <columns>Pokemons_Deceased__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Finished__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Finished Nuzlockes</label>
</ListView>